# Vortex

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md  vc140.idb
cmake/: CMakeLists.txt  FindFFMPEG.cmake  deps.cmake  deps.linux.cmake  deps.win32.cmake  sal.h  shaders.cmake  wisdom.cmake
docs/: framerate_scheduling.md
include/util/: common.h  log.h  log.ixx  reflect.h
include/util/lib/: libs.txt  stb_image.h
include/vortex/: app.h  app.ixx  common.h  common.ixx  graphics.h  graphics.ixx  ndi_output.ixx  node.h  node.ixx  node_registry.h  node_registry.ixx  pch.hpp  pipeline_storage.h  platform.h  platform.ixx  queue.ixx  sdl.ixx  swapchain.ixx  window.ixx  window_output.ixx
include/vortex/codec/: codec_common.h  codec_ffmpeg.cpp  codec_ffmpeg.h  codec_png.cpp  codec_png.h  codec_stb.cpp  codec_stb.h
include/vortex/gfx/: texture.cpp  texture.h
include/vortex/input/: image_input.h
include/vortex/output/: ndi_output.h  ndi_output.ixx  window_output.h  window_output.ixx
include/vortex/ui/: sdl.h  ui_app.h
rc/: index.html
src/: entry_main.cpp
src/vortex/: app.h  consts.h  graphics.cpp  graphics.h  model.cpp  model.h  node.h  node_registry.h  pch.hpp  platform.cpp  platform.h  probe.h  swapchain.h
src/vortex/anim/: animation.cpp  animation.h  animation_clip.cpp  animation_clip.h  keyframe.cpp  keyframe.h  property_track.cpp  property_track.h
src/vortex/animation/: animator.h  keyframe.h
src/vortex/audio/: audio_buffer.h  audio_resampler.h
src/vortex/codec/: codec_ffmpeg.cpp  codec_ffmpeg.h
src/vortex/codec/ffmpeg/: audio_resampler.cpp  audio_resampler.h  codec_ffmpeg.cpp  codec_ffmpeg.h  error.h  hw_decoder.h  stream_manager.cpp  stream_manager.h  types.h
src/vortex/gfx/: consts.h  descriptor_buffer.cpp  descriptor_buffer.h  texture.cpp  texture.h  texture_pool.cpp  texture_pool.h
src/vortex/graph/: baked_graph.h  connection.h  interfaces.h  node_factory.h  optimize_probe.cpp  optimize_probe.h  output_scheduler.cpp  output_scheduler.h  ports.h
src/vortex/input/: image_input.h
src/vortex/nodes/: node_registry.cpp  node_registry.h
src/vortex/nodes/filter/: blend.cpp  blend.h  color_correction.cpp  color_correction.h  composition.h  select.h  transform.cpp  transform.h
src/vortex/nodes/input/: image_input.cpp  image_input.h  stream_input.cpp  stream_input.h
src/vortex/nodes/output/: ndi_output.cpp  ndi_output.h  window_output.cpp  window_output.h
src/vortex/output/: ndi_output.h  window_output.h
src/vortex/properties/: props.hpp  type_traits.h
src/vortex/shaders/: basic.ps.hlsl  blend.ps.hlsl  color_correction.ps.hlsl  image.ps.hlsl  rgba_to_uyvy.cs.hlsl  transform.ps.hlsl  transform.vs.hlsl  video.ps.hlsl
src/vortex/sync/: pts_clock.h  timeline.h  wall_clock.h
src/vortex/ui/: call_handler.h  cef_app.cpp  cef_app.h  client.h  implements.h  message_dispatch.h  sdl.cpp  sdl.h  ui_app.cpp  ui_app.h  value.h
src/vortex/ui/cef/: app.cpp  app.h
src/vortex/util/: bench_clock.h  byte_ring.h  common.h  deserialize.h  interprocess_lock.cpp  interprocess_lock.h  lazy.h  log.h  log_storage.h  lut_loader.cpp  lut_loader.h  main_args.h  rational.h  reflection.h  unique_any.h
src/vortex/util/ffmpeg/: audio_resampler.cpp  audio_resampler.h  error.h  hw_decoder.h  stream_manager.cpp  stream_manager.h  types.h
src/vortex/util/interp/: easing.h  interpolation.h  vector.h
src/vortex/util/lib/: SPSC-Queue.h  libs.txt  reflect.h
src/vortex/util/ndi/: ndi_library.h  ndi_swapchain.cpp  ndi_swapchain.h
src/vortex/util/term/: impl.posix.cpp  impl.posix.h  impl.win32.cpp  impl.win32.h  input.cpp  input.h  log_sink.cpp  log_sink.h  shared.h
src/vortex/xml/: props.xml
test/: CMakeLists.txt  mock_model.h  mock_output.h  test_byte_ring.cpp  test_graph.cpp  test_model.cpp
test/js/: animation.js  basic.js  cc.js  multiple_audio.js  test_bindings.js
